--- a/Modacity/Modacity/ViewController/Practice/practice.storyboard
+++ b/Modacity/Modacity/ViewController/Practice/practice.storyboard
@@ -1090,6 +1090,7 @@ You can tap timer to pause your session.</string>
                         <outlet property="buttonSubdivisionNote3" destination="gNm-4t-shn" id="4d7-M9-MNy"/>
                         <outlet property="buttonSubdivisionNote4" destination="Wh3-Wi-UDY" id="JiD-1B-eSZ"/>
                         <outlet property="buttonSustain" destination="iUX-z6-kKw" id="886-ty-kvO"/>
+                        <outlet property="buttonTimerUpDownArrow" destination="iGP-Iw-poe" id="Jus-ve-2AA"/>
                         <outlet property="constraintForMaximizedDroneBottomSpace" destination="X6d-TH-uth" id="Wpg-gB-pw8"/>
                         <outlet property="imageViewHeader" destination="6oE-xZ-flo" id="RMa-og-Ba8"/>
                         <outlet property="imageViewRateDirection" destination="iMA-wC-dQ5" id="mgW-3I-c6b"/>
